# drupal_jupyterlite

./: .gitignore  CHANGELOG.md  README.md  composer.json  jupyterlite.info.yml  jupyterlite.routing.yml  jupyterlite.services.yml
.github/workflows/: build.yml
buildcontext/: Dockerfile  build.sh  pyproject.toml
src/Controller/: JupyterLiteController.php
src/EventSubscriber/: RequestSubscriber.php
