[tool.poetry]
name = "drupal_jupyterlite"
version = "0.1.0"
description = "Adds a JupyterLite environment to Drupal."
authors = ["Symbioquine <symbioquine@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlite = "^0.1.0-alpha.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
